--- a/charts/authorization-manager/values.yaml
+++ b/charts/authorization-manager/values.yaml
@@ -1,7 +1,7 @@
 replicaCount: 2
 
 image:
-  repository: eyalpoly/authorization-manager
+  repository: eyalpoly/authmanager
   tag: latest
   pullPolicy: Always
 
