--- a/charts/authorization-manager/values.yaml
+++ b/charts/authorization-manager/values.yaml
@@ -1,4 +1,12 @@
-replicaCount: 2
+replicaCount: 1
+
+affinity:
+  nodeAffinity:
+    requiredDuringSchedulingIgnoredDuringExecution:
+      nodeSelectorTerms:
+        - matchExpressions:
+            - key: node-role.kubernetes.io/control-plane
+              operator: DoesNotExist
 
 image:
   repository: eyalpoly/authmanager
