--- a/charts/authorization-manager/templates/deployment.yaml
+++ b/charts/authorization-manager/templates/deployment.yaml
@@ -14,6 +14,13 @@ spec:
       labels:
         {{- include "authorization-manager.selectorLabels" . | nindent 8 }}
     spec:
+      affinity:
+          nodeAffinity:
+            requiredDuringSchedulingIgnoredDuringExecution:
+              nodeSelectorTerms:
+              - matchExpressions:
+                - key: node-role.kubernetes.io/control-plane
+                  operator: DoesNotExist
       containers:
         - name: {{ .Chart.Name }}
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
