--- a/charts/authorization-manager/templates/deployment.yaml
+++ b/charts/authorization-manager/templates/deployment.yaml
@@ -21,6 +21,10 @@ spec:
               - matchExpressions:
                 - key: node-role.kubernetes.io/control-plane
                   operator: DoesNotExist
+      volumes:
+        - name: gcp-creds
+          secret:
+            secretName: {{ .Values.gcpCreds.secretName }}
       containers:
         - name: {{ .Chart.Name }}
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
@@ -29,10 +33,15 @@ spec:
             - name: http
               containerPort: {{ .Values.service.targetPort }}
               protocol: TCP
+
           env:
-            {{- range $key, $value := .Values.env }}
-            - name: {{ $key }}
-              value: {{ $value | quote }}
-            {{- end }}
+{{- with .Values.env }}
+{{ toYaml . | indent 12 }}
+{{- end }}
+
+          volumeMounts:
+            - name: gcp-creds
+              mountPath: {{ .Values.gcpCreds.mountPath }}
+              readOnly: true
           resources:
-            {{- toYaml .Values.resources | nindent 12 }}
+{{- toYaml .Values.resources | indent 12 }}
