--- a/charts/authorization-manager/values.yaml
+++ b/charts/authorization-manager/values.yaml
@@ -19,7 +19,23 @@ resources:
     memory: 256Mi
 
 env:
-  JWT_SECRET_NAME_POSTFIX: "JWT_SECRET"
-  NODE_ENV: "development"
-  LOG_LEVEL: "info"
-  PORT: "3000"
+  - name: NODE_ENV
+    value: "DEV"
+  - name: GOOGLE_CLOUD_PROJECT_ID
+    value: "attendme-32125"
+  - name: JWT_SECRET_NAME_POSTFIX
+    valueFrom:
+      secretKeyRef:
+        name: {{ .Values.jwtSecretName }}
+        key: {{ .Values.jwtSecretKey }}
+  - name: GOOGLE_APPLICATION_CREDENTIALS
+    value: "{{ .Values.gcpCreds.mountPath }}/gcp-service-account.json"
+  - name: LOG_LEVEL
+    value: "info"
+
+gcpCreds:
+  mountPath: /var/secrets/google
+  secretName: gcp-creds-secret
+
+jwtSecretName: jwt-secret
+jwtSecretKey: secretNamePostfix
